[gd_scene load_steps=17 format=2]

[ext_resource path="res://MiniGame01/Hud/Score.gd" type="Script" id=1]
[ext_resource path="res://MiniGame01/Hud/saveScore.gd" type="Script" id=2]
[ext_resource path="res://MiniGame01/Textures/Backgrounds/Argentina/BackgroundEnd_a.png" type="Texture" id=3]
[ext_resource path="res://MiniGame01/Hud/Textures/Score_Backgrounds/highscore_menu.png" type="Texture" id=4]
[ext_resource path="res://Fonts/LoveYaLikeASister.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://MiniGame01/Hud/Textures/Button/Score/namen_papier.png" type="Texture" id=6]
[ext_resource path="res://MiniGame01/Hud/Textures/Button/Score/button_ungeklickt.png" type="Texture" id=7]
[ext_resource path="res://MiniGame01/Hud/Textures/Button/Score/button_geklickt.png" type="Texture" id=8]
[ext_resource path="res://MiniGame01/currentScoreList.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 0 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Anti Aliasing", "Border", "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="DynamicFont" id=4]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 95
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=6]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 0.258816, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1200 ), Vector2( 0, -200 ), Vector2( 0, -80 ), Vector2( 0, -100 ), Vector2( 0, -100 ) ]
}

[sub_resource type="Animation" id=7]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -100 ), Vector2( 0, -1200 ) ]
}

[node name="Score" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="saveScore" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." index="1"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="testWindowSize" type="Sprite" parent="." index="2"]

visible = false
texture = ExtResource( 3 )

[node name="Background" type="Sprite" parent="." index="3"]

position = Vector2( 0, -1200 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Highscore_Label" type="Label" parent="Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -245.0
margin_top = -401.0
margin_right = 243.0
margin_bottom = -276.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Highscore"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="currentHighScore" type="Control" parent="Background" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Score" type="Label" parent="Background/currentHighScore" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -200.0
margin_top = -9.0
margin_right = 200.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.178528, 0.914062, 0.39689, 1 )
text = "0000"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="namen_papier" type="Sprite" parent="Background/currentHighScore" index="1"]

position = Vector2( -5.552, 220.909 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="LineEdit" type="LineEdit" parent="Background/currentHighScore/namen_papier" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -250.0
margin_top = -45.0
margin_right = 250.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.428661, 0.957031, 0.100937, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 16
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Enter your name"
placeholder_alpha = 1.0
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Caret", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Placeholder", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="YourScore" type="Label" parent="Background/currentHighScore" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -250.0
margin_top = -159.0
margin_right = 250.0
margin_bottom = -34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Your Score"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="TextureButton" type="TextureButton" parent="Background/currentHighScore" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 238.0
margin_top = 334.0
margin_right = 374.0
margin_bottom = 453.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]

[node name="currentScoreList" parent="Background" index="2" instance=ExtResource( 9 )]

visible = false
_sections_unfolded = [ "Rect" ]

[node name="MainMenuButton" type="TextureButton" parent="Background" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 238.0
margin_top = 334.0
margin_right = 374.0
margin_bottom = 453.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/scroll_Score_down = SubResource( 6 )
anims/scroll_Score_up = SubResource( 7 )
blend_times = [  ]

[connection signal="mouse_entered" from="Background/currentHighScore/TextureButton" to="." method="_on_TextureButton_mouse_entered"]

[connection signal="pressed" from="Background/currentHighScore/TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="mouse_entered" from="Background/MainMenuButton" to="." method="_on_MainMenuButton_mouse_entered"]

[connection signal="pressed" from="Background/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


